// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wizard /> should call navigate the previous step when click on précédent 1`] = `
<div>
  <div
    class="sc-2a0a4b0a-0 hpYuum"
  >
    <form
      class="sc-d0ca486a-0 LJxxm"
    >
      <div
        class="sc-5aee3f4f-0 fhnnMB"
      >
        <div
          class="sc-5aee3f4f-2 euiyAA"
        >
          <h1
            class="sc-5aee3f4f-1 gWOcBY"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-2a0a4b0a-0 sc-a01ac225-0 dLOZmV dIXgrP"
      >
        <span
          class="sc-a01ac225-1 iBHdtt"
        >
          Étape
          <span
            class="sc-a01ac225-2 cIHIqR"
          >
            s
          </span>
          <span
            class="sc-a01ac225-3 iiwWRG"
          >
             
            1/2
          </span>
        </span>
        <ol
          class="sc-ab356c14-0 bpNHPl"
        >
          <li
            aria-live="polite"
            class="sc-a01ac225-4 fGtyTv"
            title="onglet actif"
          >
            <span
              class="sc-a01ac225-5 gsA-Dvn"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="sc-a01ac225-4 kUwEMV"
          >
            <span
              class="sc-a01ac225-5 hTBVdk"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="sc-bc9d1e5-1 csPxMe"
      >
        <button
          class="sc-95bd4344-0 jqYNvz sc-bc9d1e5-0 sc-bc9d1e5-2 kyKZPU gPKfXM"
        >
          Commencer
          <svg
            aria-hidden="true"
            class="sc-bc9d1e5-3 iwXRVM"
            fill="none"
            viewBox="0 0 28 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should handle initialState.stepIndex 1`] = `
<div>
  <div
    class="sc-2a0a4b0a-0 hpYuum"
  >
    <form
      class="sc-d0ca486a-0 LJxxm"
    >
      <div
        class="sc-5aee3f4f-0 fhnnMB"
      >
        <div
          class="sc-5aee3f4f-2 euiyAA"
        >
          <h1
            class="sc-5aee3f4f-1 gWOcBY"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-2a0a4b0a-0 sc-a01ac225-0 dLOZmV dIXgrP"
      >
        <span
          class="sc-a01ac225-1 iBHdtt"
        >
          Étape
          <span
            class="sc-a01ac225-2 cIHIqR"
          >
            s
          </span>
          <span
            class="sc-a01ac225-3 iiwWRG"
          >
             
            2/2
          </span>
        </span>
        <ol
          class="sc-ab356c14-0 bpNHPl"
        >
          <li
            class="sc-a01ac225-4 kUwEMV"
          >
            <span
              class="sc-a01ac225-5 hTBVdk"
            >
              1
            </span>
            First Step
          </li>
          <li
            aria-live="polite"
            class="sc-a01ac225-4 fGtyTv"
            title="onglet actif"
          >
            <span
              class="sc-a01ac225-5 gsA-Dvn"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Deuxieme Etape
      </p>
      <label
        for="cb"
      >
        etape facultative
        <input
          id="cb"
          name="fooStep"
          type="checkbox"
          value=""
        />
      </label>
      <div
        class="sc-bc9d1e5-1 csPxMe"
      >
        <button
          class="sc-95bd4344-0 ddXsil sc-bc9d1e5-0 kyKZPU"
          type="button"
        >
          Précédent
        </button>
        <button
          class="sc-95bd4344-0 dqVtzj sc-bc9d1e5-0 kyKZPU"
          type="button"
        >
          Imprimer le résultat
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should handle initialValues 1`] = `
<div>
  <div
    class="sc-2a0a4b0a-0 hpYuum"
  >
    <form
      class="sc-d0ca486a-0 LJxxm"
    >
      <div
        class="sc-5aee3f4f-0 fhnnMB"
      >
        <div
          class="sc-5aee3f4f-2 euiyAA"
        >
          <h1
            class="sc-5aee3f4f-1 gWOcBY"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-2a0a4b0a-0 sc-a01ac225-0 dLOZmV dIXgrP"
      >
        <span
          class="sc-a01ac225-1 iBHdtt"
        >
          Étape
          <span
            class="sc-a01ac225-2 cIHIqR"
          >
            s
          </span>
          <span
            class="sc-a01ac225-3 iiwWRG"
          >
             
            1/3
          </span>
        </span>
        <ol
          class="sc-ab356c14-0 bpNHPl"
        >
          <li
            aria-live="polite"
            class="sc-a01ac225-4 fGtyTv"
            title="onglet actif"
          >
            <span
              class="sc-a01ac225-5 gsA-Dvn"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="sc-a01ac225-4 kUwEMV"
          >
            <span
              class="sc-a01ac225-5 hTBVdk"
            >
              2
            </span>
            Second Step
          </li>
          <li
            class="sc-a01ac225-4 kUwEMV"
          >
            <span
              class="sc-a01ac225-5 hTBVdk"
            >
              3
            </span>
            Optional Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="sc-bc9d1e5-1 csPxMe"
      >
        <button
          class="sc-95bd4344-0 jqYNvz sc-bc9d1e5-0 sc-bc9d1e5-2 kyKZPU gPKfXM"
        >
          Commencer
          <svg
            aria-hidden="true"
            class="sc-bc9d1e5-3 iwXRVM"
            fill="none"
            viewBox="0 0 28 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should navigate to the second step when click on Commencer 1`] = `
<div>
  <div
    class="sc-2a0a4b0a-0 hpYuum"
  >
    <form
      class="sc-d0ca486a-0 LJxxm"
    >
      <div
        class="sc-5aee3f4f-0 fhnnMB"
      >
        <div
          class="sc-5aee3f4f-2 euiyAA"
        >
          <h1
            class="sc-5aee3f4f-1 gWOcBY"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-2a0a4b0a-0 sc-a01ac225-0 dLOZmV dIXgrP"
      >
        <span
          class="sc-a01ac225-1 iBHdtt"
        >
          Étape
          <span
            class="sc-a01ac225-2 cIHIqR"
          >
            s
          </span>
          <span
            class="sc-a01ac225-3 iiwWRG"
          >
             
            2/2
          </span>
        </span>
        <ol
          class="sc-ab356c14-0 bpNHPl"
        >
          <li
            class="sc-a01ac225-4 kUwEMV"
          >
            <span
              class="sc-a01ac225-5 hTBVdk"
            >
              1
            </span>
            First Step
          </li>
          <li
            aria-live="polite"
            class="sc-a01ac225-4 fGtyTv"
            title="onglet actif"
          >
            <span
              class="sc-a01ac225-5 gsA-Dvn"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Deuxieme Etape
      </p>
      <label
        for="cb"
      >
        etape facultative
        <input
          id="cb"
          name="fooStep"
          type="checkbox"
          value=""
        />
      </label>
      <div
        class="sc-bc9d1e5-1 csPxMe"
      >
        <button
          class="sc-95bd4344-0 ddXsil sc-bc9d1e5-0 kyKZPU"
          type="button"
        >
          Précédent
        </button>
        <button
          class="sc-95bd4344-0 dqVtzj sc-bc9d1e5-0 kyKZPU"
          type="button"
        >
          Imprimer le résultat
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should render a step 1`] = `
<div>
  <div
    class="sc-2a0a4b0a-0 hpYuum"
  >
    <form
      class="sc-d0ca486a-0 LJxxm"
    >
      <div
        class="sc-5aee3f4f-0 fhnnMB"
      >
        <div
          class="sc-5aee3f4f-2 euiyAA"
        >
          <h1
            class="sc-5aee3f4f-1 gWOcBY"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-2a0a4b0a-0 sc-a01ac225-0 dLOZmV dIXgrP"
      >
        <span
          class="sc-a01ac225-1 iBHdtt"
        >
          Étape
          <span
            class="sc-a01ac225-2 cIHIqR"
          >
            s
          </span>
          <span
            class="sc-a01ac225-3 iiwWRG"
          >
             
            1/2
          </span>
        </span>
        <ol
          class="sc-ab356c14-0 bpNHPl"
        >
          <li
            aria-live="polite"
            class="sc-a01ac225-4 fGtyTv"
            title="onglet actif"
          >
            <span
              class="sc-a01ac225-5 gsA-Dvn"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="sc-a01ac225-4 kUwEMV"
          >
            <span
              class="sc-a01ac225-5 hTBVdk"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="sc-bc9d1e5-1 csPxMe"
      >
        <button
          class="sc-95bd4344-0 jqYNvz sc-bc9d1e5-0 sc-bc9d1e5-2 kyKZPU gPKfXM"
        >
          Commencer
          <svg
            aria-hidden="true"
            class="sc-bc9d1e5-3 iwXRVM"
            fill="none"
            viewBox="0 0 28 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;
